--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
 dependencies:
   flutter:
     sdk: flutter
+  libedax4dart: ^0.2.1-dev.2
 
 
   # The following adds the Cupertino Icons font to your application.
