--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -57,5 +57,5 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: pedax
+          name: pedax-${{ runner.os }}
           path: ${{ env.artifact_target }}
