--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -32,7 +32,7 @@ jobs:
             setup-script: flutter config --enable-windows-desktop
             distribution_path: build/windows/runner/_mode_/ # See: https://flutter.dev/desktop#distribution
           - os: macos-latest
-            subcommand: mac
+            subcommand: macos
             setup-script: flutter config --enable-macos-desktop
             distribution_path: build/linux # ??? # See: https://flutter.dev/desktop#distribution
 
