--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -26,7 +26,7 @@ jobs:
               flutter config --enable-linux-desktop
               sudo apt-get update
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
-            distribution_path: build/macos/Build/Products/_mode_/pedax.app # See: https://flutter.dev/desktop#distribution
+            distribution_path: build/linux # ??? # See: https://flutter.dev/desktop#distribution
           - os: windows-latest
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
@@ -34,7 +34,7 @@ jobs:
           - os: macos-latest
             subcommand: macos
             setup-script: flutter config --enable-macos-desktop
-            distribution_path: build/ # ??? # See: https://flutter.dev/desktop#distribution
+            distribution_path: build/macos/Build/Products/_mode_/pedax.app # See: https://flutter.dev/desktop#distribution
 
     steps:
       - uses: actions/checkout@v2
