--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: doctor
         run: flutter doctor -v
       - name: drive
-      - uses: nick-invision/retry@v2
+        uses: nick-invision/retry@v2
         with:
           timeout_seconds: 8
           max_attempts: 3
