--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -10,18 +10,18 @@ on:
 jobs:
   integration_test:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 60
+    timeout-minutes: 10
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
-          - os: ubuntu-latest
-            device: linux
-            setup-script: |-
-              flutter config --enable-linux-desktop
-              sudo apt-get update
-              sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
+        os: [windows-latest, macos-latest] # Why isn't there ubuntsu-latest? See: https://github.com/sensuikan1973/pedax/issues/7
+        include:
+          # - os: ubuntu-latest
+          #   device: linux
+          #   setup-script: |-
+          #     flutter config --enable-linux-desktop
+          #     sudo apt-get update
+          #     sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
           - os: windows-latest
             device: windows
             setup-script: flutter config --enable-windows-desktop
@@ -40,14 +40,5 @@ jobs:
         run: flutter pub get
       - name: doctor
         run: flutter doctor -v
-      # DEBUG
-      - name: setup tmate session for debug
-        if: runner.os == 'Linux'
-        uses: mxschmitt/action-tmate@v3
       - name: drive
-        uses: nick-invision/retry@v2
-        with:
-          timeout_seconds: 600
-          max_attempts: 3
-          retry_on: error
-          command: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
+        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
