--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     sdk: flutter
   libedax4dart: ^0.2.1-dev.3
 
+  # FIXME: 1.16.15 以降だと、path_provider の依存する ffi が null-safety でないため、libedax4dart と競合してしまう
+  path_provider: ^1.6.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
