--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   libedax4dart: ^0.2.1-dev.3
 
   # FIXME: 1.16.15 以降だと、path_provider の依存する ffi が null-safety でないため、libedax4dart と競合してしまう
-  path_provider: ^1.6.14
+  path_provider: ^1.6.14 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
