--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  libedax4dart: ^0.2.1-dev.3
-
-  # FIXME: 1.16.15 以降だと、path_provider の依存する ffi が null-safety でないため、libedax4dart と競合してしまう
-  path_provider: ^1.6.14 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
-  # FIXME: 0.5.11 以降だと、shared_preferences の依存する ffi が null-safety でないため、libedax4dart と競合してしまう
-  shared_preferences: ^0.5.10
+  libedax4dart: ^0.2.1-dev.4
+  path_provider: ^1.6.27 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
