--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,4 +2,4 @@ include: package:pedantic_sensuikan1973/analysis_options.yaml
 
 analyzer:
   exclude:
-    - lib/generated_plugin_registrant.dart
+    - '**/generated*.dart'
