--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,3 +44,5 @@ flutter:
   # See: https://flutter.dev/docs/development/ui/assets-and-images
   assets:
     - assets/
+    - assets/libedax/data/
+    - assets/libedax/dll/
