--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -40,7 +40,10 @@ jobs:
         run: flutter pub get
       - name: doctor
         run: flutter doctor -v
+
       - name: xattr
+        if: runner.os == 'macOS'
         run: xattr -d -r com.apple.quarantine assets/libedax/dll
+
       - name: drive
         run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
