Revert "tmp commentout"
This reverts commit 4bd5f2eadbec5421da437ebf86aa5bbff82f199f.

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -37,7 +37,7 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: flutter test # --coverage --coverage-path=./coverage/lcov.info
-      # - uses: codecov/codecov-action@v1
-      #   with:
-      #     file: ./coverage/lcov.info
+      - run: flutter test --coverage --coverage-path=./coverage/lcov.info
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage/lcov.info
