--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -29,13 +29,12 @@ jobs:
       - run: flutter analyze --fatal-infos --fatal-warnings .
 
   widget_test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest # TODO: change to ubuntu.
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
           channel: 'dev'
-          flutter-version: '1.26.0-17.1.pre-dev' # debug
       - name: install dependencies
         run: flutter pub get
       - run: flutter test --coverage --coverage-path=./coverage/lcov.info
