--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - run: flutter analyze --fatal-infos --fatal-warnings .
 
   widget_test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest # TODO: change to ubuntu.
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -37,7 +37,7 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: flutter test --coverage --coverage-path=~/coverage/lcov.info
+      - run: flutter test --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v1
         with:
-          file: ~/coverage/lcov.info
+          file: ./coverage/lcov.info
