--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     sdk: flutter
   libedax4dart: ^0.2.1-dev.4
   path_provider: ^1.6.27 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  provider: ^5.0.0-nullsafety.3
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
@@ -36,6 +37,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  mockito: ^5.0.0-nullsafety.5
   pedantic_sensuikan1973: any
 
 flutter:
