add ubuntu job even if fail

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -29,7 +29,12 @@ jobs:
       - run: flutter analyze --fatal-infos --fatal-warnings .
 
   widget_test:
-    runs-on: macos-latest # TODO: change to ubuntu.
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
+    strategy:
+      fail-fast: false # I want results from all OSes even if one fails.
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest] # TODO: https://github.com/sensuikan1973/pedax/issues/12
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
