--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  libedax4dart: ^0.2.1-dev.4
+  libedax4dart: ^0.3.0-beta.0
   path_provider: ^1.6.27 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0-nullsafety.3
   shared_preferences: ^0.5.12+4
