--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: ^0.17.0-nullsafety.2
   libedax4dart: ^0.3.0-beta.1
   path_provider: ^1.6.27 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0-nullsafety.3
@@ -44,6 +45,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true # See: https://flutter.dev/docs/development/accessibility-and-localization/internationalization#adding-your-own-localized-messages
 
   # See: https://flutter.dev/docs/development/ui/assets-and-images
   assets:
