--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0-nullsafety.2
   libedax4dart: ^0.3.0-beta.1
+  package_info: ^0.5.0-nullsafety
   path_provider: ^1.6.27 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0-nullsafety.3
   shared_preferences: ^0.5.12+4
