--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,6 @@ flutter:
 
   # See: https://flutter.dev/docs/development/ui/assets-and-images
   assets:
-    - assets/
+    - assets/images/
     - assets/libedax/data/
     - assets/libedax/dll/
