--- a/.codecov.yml
+++ b/.codecov.yml
@@ -13,7 +13,7 @@ coverage:
   status:
     project:
       default:
-        target: 50% # for now TODO: up to 70%
+        target: 70%
     patch: no # See: https://docs.codecov.io/docs/commit-status#section-patch-status
     changes: no
 
