--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -42,7 +42,7 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: flutter test --coverage --coverage-path=./coverage/lcov.info
+      - run: flutter test --coverage --coverage-path=./coverage/lcov.info --verbose
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
