--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -26,15 +26,15 @@ jobs:
               flutter config --enable-linux-desktop
               sudo apt-get update
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
-            distribution_path: build/linux # ??? # See: https://flutter.dev/desktop#distribution
+            distribution_path: build/linux/_mode_ # TODO: is this correct ?
           - os: windows-latest
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
-            distribution_path: build/windows/runner/_mode_/ # See: https://flutter.dev/desktop#distribution
+            distribution_path: build/windows/runner/_mode_
           - os: macos-latest
             subcommand: macos
             setup-script: flutter config --enable-macos-desktop
-            distribution_path: build/macos/Build/Products/_mode_ # See: https://flutter.dev/desktop#distribution
+            distribution_path: build/macos/Build/Products/_mode_
 
     steps:
       - uses: actions/checkout@v2
