--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -2,10 +2,10 @@ name: Flutter CI
 
 on:
   pull_request:
-    paths: ['**.dart', 'pubspec.*', 'analysis_options.yaml', '.github/workflows/flutter_ci.yaml']
+    paths: ['**.dart', 'pubspec.*', 'analysis_options.yaml', 'assets/libedax/**', '.github/workflows/flutter_ci.yaml']
   push:
     branches: [ main ]
-    paths: ['**.dart', 'pubspec.*', 'analysis_options.yaml', '.github/workflows/flutter_ci.yaml']
+    paths: ['**.dart', 'pubspec.*', 'analysis_options.yaml', 'assets/libedax/**', '.github/workflows/flutter_ci.yaml']
 
 jobs:
   format:
