--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 # See: https://dart.dev/tools/pub/pubspec
-# ref: https://dart.dev/null-safety/unsound-null-safety
+# REF: https://dart.dev/null-safety/unsound-null-safety
 
 name: pedax
 description: edax-reversi Board.
@@ -31,7 +31,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0-nullsafety.2
-  libedax4dart: ^0.4.0-beta.1
+  libedax4dart: ^0.5.0-beta.0
   path_provider: ^2.0.0-nullsafety # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   shared_preferences: ^2.0.0-nullsafety
 
