--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -2,11 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<!-- NOTE:
+		I disable sandbox with 2 reasons.
+    - pedax isn't going to be published on App Store "for now".
+		- pedax requires the premission to read user-specified file path (for book.dat and eval.dat).
+		  - There are No flutter plugins (for macos) yet. (e.g. `file_selector` hasn't supported macos yet.)
+			  - REF: https://github.com/flutter/plugins/tree/master/packages/file_selector
+  -->
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
+
 	<key>com.apple.security.cs.allow-jit</key>
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+
+	<!--
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+	-->
 </dict>
 </plist>
