--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0-nullsafety.2
-  libedax4dart: ^0.5.0-beta.1
+  libedax4dart: ^0.5.0-beta.2
+    # git:
+    #   url: https://github.com/sensuikan1973/libedax4dart.git
+    #   ref: xxx
   path_provider: ^2.0.0-nullsafety # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   shared_preferences: ^2.0.0-nullsafety
 
