--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -42,7 +42,9 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
+      - run: |-
+          flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info > test_report.json
+          flutter pub run dart_dot_reporter test_report.json
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
