--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.0-nullsafety
 
 dev_dependencies:
+  dart_dot_reporter: ^1.0.3
   flutter_test:
     sdk: flutter
   integration_test:
