--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -44,7 +44,7 @@ jobs:
         run: flutter pub get
       - run: |-
           flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info > test_report.json
-          flutter pub run dart_dot_reporter test_report.json
+          flutter pub run dart_dot_reporter test_report.json --show-message
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
