--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -42,7 +42,8 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: |-
+      - name: run test
+        run: |-
           flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info > test_report.json
           flutter pub run dart_dot_reporter test_report.json --show-message
       - uses: codecov/codecov-action@v1
