--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -45,6 +45,7 @@ jobs:
       - name: run test
         run: |-
           flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info > test_report.json
+          echo "==========" dart_dot_reporter =========="
           flutter pub run dart_dot_reporter test_report.json --show-message
       - uses: codecov/codecov-action@v1
         with:
