fix unstable widget test on Linux & refactor some (#28)
* call `edaxBookLoad` command
* some refactor
* output test report
* add detail message
* add name
* fix book file path setting Form
* refactor dialog
* update as it is
* enhance test
* fix dispose
* add test of debug dump
* default book dat

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -42,7 +42,10 @@ jobs:
           channel: 'dev'
       - name: install dependencies
         run: flutter pub get
-      - run: flutter test --coverage --coverage-path=./coverage/lcov.info --verbose
+      - name: run test
+        run: flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info | tee test_report.json
+      - name: simple test report
+        run: flutter pub run dart_dot_reporter test_report.json --show-message
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
