--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 # REF: https://dart.dev/null-safety/unsound-null-safety
 
 name: pedax
-description: edax-reversi Board.
+description: Board with edax.
 publish_to: 'none'
 homepage: https://github.com/sensuikan1973/pedax # TODO: change to blanding site
 repository: https://github.com/sensuikan1973/pedax
@@ -22,7 +22,7 @@ version: 0.0.1+1
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0-0 <3.0.0'
-  flutter: ^1.26.0-0
+  flutter: ^1.27.0-0
 
 dependencies:
   cupertino_icons: ^1.0.2
