--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Flutter",
       "request": "launch",
       "type": "dart",
-      "args": ["--target", "lib/main.dart", "-d", "mac"]
+      "args": ["--target", "lib/main.dart", "--device-id", "mac"]
     }
   ]
 }
