--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        run: flutter test --verbose --reporter json --coverage --coverage-path=./coverage/lcov.info | tee test_report.json
+        run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info | tee test_report.log
       - name: simple test report
         if: always()
         run: flutter pub run dart_dot_reporter test_report.json --show-message
