--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -46,7 +46,7 @@ jobs:
         run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info | tee test_report.log
       - name: simple test report
         if: always()
-        run: flutter pub run dart_dot_reporter test_report.json --show-message
+        run: flutter pub run dart_dot_reporter test_report.log --show-message
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
