--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -26,7 +26,7 @@ jobs:
               flutter config --enable-linux-desktop
               sudo apt-get update
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
-            distribution_path: build/linux/x64/_mode_ # TODO: is this correct ?
+            distribution_path: build/linux/x64/_mode_
           - os: windows-latest
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
