--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
+  logger: ^1.0.0-nullsafety.0
   path_provider: ^2.0.0-nullsafety.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   shared_preferences: ^2.0.0-nullsafety.1
 
