--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -43,11 +43,7 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 2
-          command: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
+        run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
