--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -44,6 +44,10 @@ jobs:
         run: flutter pub get
       - name: debug
         run: echo %TEMP% && echo "===" && echo %TMP%
+      # - name: windows workaround # See: https://github.com/actions/virtual-environments/issues/712
+      #   run: |-
+      #     echo "TEMP=$env:USERPROFILE\AppData\Local\Temp" >> $env:GITHUB_ENV
+      #     echo "TEP=$env:USERPROFILE\AppData\Local\Tmp" >> $env:GITHUB_ENV
       - name: run test
         run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v1
