--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-  libedax4dart: ^0.5.0-beta.5
+  libedax4dart: ^0.5.0-beta.6
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
   logger: ^1.0.0-nullsafety.0
   path_provider: ^2.0.0 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
-  shared_preferences: ^2.0.0
+  provider: ^5.0.0-nullsafety.5
+  shared_preferences: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  mockito: ^5.0.0-nullsafety.7
   pedantic_sensuikan1973: any
 
 flutter:
