Revert "try --keep-app-running driver test"
This reverts commit 159e81efb5ab0ed8b6482493e3856039e5a1d754.

--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -41,4 +41,4 @@ jobs:
       - name: doctor
         run: flutter doctor -v
       - name: drive
-        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose --keep-app-running
+        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose
