--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   path_provider: ^2.0.0 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0-nullsafety.5
   shared_preferences: ^2.0.1
+  window_size:
+    git:
+      url: git://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
+      ref: 405e6c5476fbdfd3859cf2f8570b21afb692ea3a
 
 dev_dependencies:
   flutter_test:
