--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ version: 0.0.1+1
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0-0 <3.0.0'
-  flutter: ^1.27.0-0
+  flutter: ^2.0.0
 
 dependencies:
   cupertino_icons: ^1.0.2
