--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        flutter_channel: [dev, beta]
         include:
           - os: ubuntu-latest
             device: linux
@@ -33,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'dev'
+          channel: ${{ matrix.flutter_channel }}
       - name: setup
         run: ${{ matrix.setup-script }}
       - name: install dependencies
