--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -37,6 +37,7 @@ jobs:
             setup-script: |-
               flutter config --enable-macos-desktop
               rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
+              flutter precache --force
             distribution_path: build/macos/Build/Products/_mode_
 
     steps:
