--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -28,7 +28,10 @@ jobs:
             setup-script: flutter config --enable-windows-desktop
           - os: macos-latest
             device: macos
-            setup-script: flutter config --enable-macos-desktop
+            setup-script: |-
+              flutter config --enable-macos-desktop
+              rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
+              flutter precache --force
 
     steps:
       - uses: actions/checkout@v2
