--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -18,6 +18,7 @@ jobs:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        flutter_channel: [dev, beta]
         mode: [debug, release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
           - os: ubuntu-latest
@@ -33,14 +34,17 @@ jobs:
             distribution_path: build/windows/runner/_mode_
           - os: macos-latest
             subcommand: macos
-            setup-script: flutter config --enable-macos-desktop
+            setup-script: |-
+              flutter config --enable-macos-desktop
+              rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
+              flutter precache --force
             distribution_path: build/macos/Build/Products/_mode_
 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'dev'
+          channel: ${{ matrix.flutter_channel }}
       - name: setup
         run: ${{ matrix.setup-script }}
       - name: install dependencies
