refactor noisy log on test, mild fix option setting handling (#66)
* refactor noisy log on test, mild fix option setting handling

* add test case for undo/redo button

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: install dependencies
         run: flutter pub get
       - name: run test
-        run: flutter test --verbose --coverage --coverage-path=./coverage/lcov.info
+        run: flutter test --coverage --coverage-path=./coverage/lcov.info
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
