use file_selector for book.dat of user, and enable macos app Sandbox (#67)
* add document link about macos app sandbox
* mild upgrade provider package
* add file_selector on dependencies
* mild fix log message
* mild fix l10n
* mild upgrade libedax4dart
* remove unnecessary log
* add entitlement for reading files specieied by user
* enable macos Sandbox
* add log about edax initialization
* add macos_secure_bookmarks on dependencies
* To enable bookmarking, change entitlement com.apple.security.files.user-selected.read-"write".
If read-only, app can't bookmark
* add comment for developer
* upgrade macos_secure_bookmarks
* add document link
* Finally, I can run pedax on mac sandbox
* fix integration test
* update screenshot on README

--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -2,8 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<!-- See: the comment in DebugProfile.entitlements -->
 	<key>com.apple.security.app-sandbox</key>
-	<false/>
+	<true/>
+
+	<!-- See: https://pub.dev/packages/file_selector_macos -->
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+
+	<!-- See: https://developer.apple.com/library/archive/documentation/Miscellaneous/Reference/EntitlementKeyReference/Chapters/EnablingAppSandbox.html#//apple_ref/doc/uid/TP40011195-CH4-SW18 -->
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
 </dict>
 </plist>
