--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,19 +26,25 @@ environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
 
 dependencies:
   cupertino_icons: ^1.0.2
+  # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
+  file_selector: ^0.8.2
+  file_selector_linux: ^0.0.2
+  file_selector_macos: ^0.0.4
+  file_selector_windows: ^0.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  font_awesome_flutter: 9.0.0-nullsafety
+  font_awesome_flutter: ^9.0.0-nullsafety
   intl: ^0.17.0
-  libedax4dart: ^0.6.0-beta.0
+  libedax4dart: ^0.6.0-beta.1
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
   logger: ^1.0.0-nullsafety.0
+  macos_secure_bookmarks: ^0.2.0
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
-  provider: ^5.0.0-nullsafety.5
+  provider: ^5.0.0
   shared_preferences: ^2.0.3
   window_size:
     git:
