--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -35,7 +35,7 @@ jobs:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
-        flutter_channel: [dev, beta]
+        flutter_channel: [dev]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
