use ubuntu-20.04 on job

--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -14,10 +14,10 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-11.0, ubuntu-latest] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        os: [windows-latest, macos-11.0, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
         flutter_channel: [dev]
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             device: linux
             setup-script: |-
               sudo apt-get update -y
