--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -17,11 +17,11 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11.0]
+        os: [ubuntu-20.04, windows-latest, macos-11.0]
         flutter_channel: [dev, beta]
         mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             subcommand: linux
             setup-script: |-
               flutter config --enable-linux-desktop
